--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,8 +8,7 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    permissions:
-      packages: write
+    permissions: write-all
 
     steps:
     - name: Checkout the code
