--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,21 +29,8 @@ jobs:
       run: |
         python packaging\package.py "Compressly-${{ github.ref_name }}-win64.zip"
 
-    - name: Create GitHub Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        tag_name: ${{ github.ref_name }}
-        release_name: Release ${{ github.ref_name }}
-        draft: false
-        prerelease: false
-
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./Compressly-${{ github.ref_name }}-win64.zip
-        asset_name: Compressly-${{ github.ref_name }}-win64.zip
-        asset_content_type: application/zip
+        files: "Compressly-${{ github.ref_name }}-win64.zip"
