Add workflow for autoamted testing

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,7 +6,7 @@ on:
       - '*'  # This triggers the workflow for any tag creation
 
 jobs:
-  build:
+  packaging:
     runs-on: windows-latest
     permissions: write-all
 
